[package]
name = "my-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
log = "0.4.20"
wgpu = "0.19.1"
winit = "0.29.10"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bytemuck = "1.14.1"
