[package]
name = "my-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
log = "0.4.20"
wgpu = "0.19.1"
winit = "0.29.10"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bytemuck = "1.14.1"
image = { version = "0.24.8", features = ["jpeg", "png"] }
anyhow = "1.0.79"
cgmath = "0.18.0"
fs_extra = "1.3.0"
tobj = { version = "4.0.1", features = [
    "async",
] }
cfg-if = { version = "1.0.0", features = [] }
reqwest = "0.11.24"
web-sys = "0.3.68"

[build-dependencies]
anyhow = "1.0.79"
fs_extra = "1.3.0"
glob = "0.3.1"
